# __CFAB_browser

./: .gitignore  CFAB_Browser.spec  GEMINI.md  POSTEPY_REFACTORYZACJI.md  README_CHECKER.md  README_pyinstaller.txt  TODO.md  __bandit_report.py  __radon_report.py  __vulture_report.py  build_pyinstaller.py  build_pyinstaller_upx_fix.md  cfab_browser.py  check_icon.py  check_rust_setup.bat  check_rust_setup.ps1  check_rust_setup.py  config copy.json  config.json  core_audit_report.md  create_ico.py  gallery_tab_funkcjonalnosci.md  gitignore.txt  install_pyinstaller.bat  list.md  parowanie.md  polish_logs.md  polish_ui_messages.md  polish_variables.md  poprawki.md  preferences.md  quick_test.py  raport.md  raport_audytu_kodu.md  raport_poprawek.md  readme.md  refactor.md  requirements.txt  run.py  rust.md  (+16 more)
.claude/: settings.local.json
.cursor/rules/: project.mdc
.windsurf/rules/: cfab.md
AUDYT/: business_logic_map.md  correction_implementation_plan.md  modernization_roadmap.md  performance_analysis.md
AUDYT/backups/: amv_controller_backup.py  amv_model_backup.py  amv_model_backup_2025-06-28.py  amv_tab_backup.py  asset_grid_model_backup.py  file_operations_model_repository_backup.py  folder_scanner_worker_backup_2025-01-25.py  folder_scanner_worker_backup_2025-06-28.py  gallery_tab_backup_2025-01-25.py  main_window_backup_2025-01-25.py  preview_gallery_view_backup.py  rules_backup_2025-01-25.py  rules_backup_2025-06-28.py  scanner_backup.py  scanner_backup_b.py  scanner_repository_backup.py  thumbnail_performance_monitoring_backup.py
AUDYT/corrections/: _model_correction.md  amv_controller_correction.md  amv_controller_dependency_injection_correction.md  amv_controller_modernization.md  amv_controller_mvc_modernization_correction.md  amv_controller_performance.md  amv_controller_performance_monitoring_correction.md  amv_model_dependency_injection_correction.md  amv_model_mvc_modernization_correction.md  amv_model_repository_pattern_correction.md  amv_tab_correction.md  amv_tab_mvc_modernization_correction.md  amv_view_correction.md  amv_view_mvc_modernization_correction.md  asset_grid_model_cache_lazy_loading_correction.md  asset_grid_model_correction.md  asset_grid_model_modernization.md  asset_grid_model_performance.md  asset_grid_model_thread_safety_correction.md  asset_tile_model_correction.md  asset_tile_model_modernization.md  asset_tile_model_performance.md  asset_tile_view_cache_lazy_loading_correction.md  asset_tile_view_correction.md  asset_tile_view_modernization.md  asset_tile_view_performance.md  asset_tile_view_thread_safety_correction.md  config_manager_model_correction.md  config_manager_model_modernization.md  config_manager_model_performance.md  control_panel_model_correction.md  control_panel_model_modernization.md  control_panel_model_performance.md  drag_drop_model_correction.md  drag_drop_model_modernization.md  drag_drop_model_performance.md  file_operations_model_correction.md  file_operations_model_modernization.md  file_operations_model_performance.md  file_operations_model_repository_pattern_correction.md  (+53 more)
AUDYT/patches/: amv_controller_dependency_injection_patch.md  amv_controller_mvc_modernization_patch.md  (+45 more)
_BASE_/: audyt_4.md  audyt_kafli_ui.md  audyt_logiki_biznesowej.md  correction_template.md  refactoring_rules.md
__doc/: STYLOWANIE_DOKUMENTACJA.md  _BASE_.rar  amv_tab copy.py  audyt_logiki_biznesowej.md  audyt_responsywnosci_ui.md  business_logic_map_template.md  correction_template.md  implementation_plan_template.md  model.md  patch_code_template.md  refactoring_rules.md  stage_2.md  stage_3.md
__raports/: bandit_report.md  profile_report_20250705_013445.txt  profile_stats_20250705_013445.stats  radon_report.md  vulture_report.md
__tools/: Bridge_cache.md  README_TOOLS.md  README_profile_analyzer.md  __SPMP.py  __clean_cache.py  add_texture.py  blend_move.py  blend_zip.py  check_icon.py  clear_space.py  compress_max.py  copy_texture.py  fix_icon.py  install_profile_tools.bat  profile_analyzer.py  quick_profile.py  remove_folder_suffix.py  rename_files.py  requirements_profile.txt  run_profile.bat  simple_profile.bat  spm.py  supply_tex.py
_test/: test_gallery_tab.py  test_pairing_tab.py  test_scanner.py  test_tools_tab.py
core/: __init__.py  amv_tab.py  base_widgets.py  code_review_report.md  file_utils.py  folder_scanner_worker.py  gallery_tab.py  json_utils.py  main_window.py  pairing_tab.py  performance_monitor.py  preview_window.py  rules.py  rust_scanner.py  scanner.py  selection_counter.py  thread_manager.py  thumbnail.py  thumbnail_cache.py  thumbnail_tile copy.py  thumbnail_tile.py  tools_tab.py  utilities.py
doc/: __clean_code.md  audyt_logiki_biznesowej.md  business_logic_map_template.md  etet.md  patch_code_template.md
scanner_rust/: .gitignore  BUILD_INFO_README.md  Cargo.toml  QUICKSTART.md  README.md  benchmark.py  build.bat  build.py  install_rust.bat  pyproject.toml  setup.py  test_build_info.py
scanner_rust/crates/hash_utils/: Cargo.toml  build.rs
scanner_rust/crates/hash_utils/src/: build_info.rs  lib.rs
scanner_rust/crates/image_tools/: Cargo.toml  build.rs
scanner_rust/crates/image_tools/src/: build_info.rs  config.rs  lib.rs
scanner_rust/crates/scanner/: Cargo.toml  pyproject.toml
scanner_rust/crates/scanner/src/: asset_builder.rs  build_info.rs  file_utils.rs  lib.rs  scanner.rs  thumbnail.rs  types.rs
scanner_rust/src/: asset_builder.rs  lib.rs  scanner.rs  thumbnail.rs  types.rs
scanner_rust/tests/: test_scanner.rs
test_folder/: material1.asset  material2.asset  unpair_files.json
test_rust_project/: Cargo.toml
(+76 files in other folders)
