[package]
name = "scanner-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
rayon = "1.8"          # Przetwarzanie równoległe
anyhow = "1.0"         # Obsługa błędów
once_cell = "1.19"     # Lazy static
thiserror = "1.0"      # Definiowanie błędów

[dev-dependencies]
tempfile = "3.8"       # Tymczasowe pliki do testów

[lib]
name = "scanner_rust"
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort" 