[workspace]
members = [
    "crates/scanner",
    "crates/image_tools",
    "crates/hash_utils",
]

[workspace.dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
image = { version = "0.25", features = ["webp", "png", "jpeg"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
rayon = "1.8"
anyhow = "1.0"
once_cell = "1.19"
thiserror = "1.0"
webp = "0.3" 