[package]
name = "scanner-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
webp = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
tempfile = "3.8"       # Tymczasowe pliki do testów

[lib]
name = "scanner_rust"
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort" 