[package]
name = "scanner-rust"
version.workspace = true
edition.workspace = true

[build-dependencies]
vergen = "7.5.1"

[dependencies]
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
webp = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
tempfile = "3.8"       # Tymczasowe pliki do testów

[lib]
name = "scanner_rust"
crate-type = ["cdylib"] 